--- a/gui/fct_comp_1.ui
+++ b/gui/fct_comp_1.ui
@@ -14,41 +14,85 @@
    <string>Liste des épreuves d'une catégorie (version 2, catégories extraites de la BD)</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+   <item row="1" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QLabel" name="labelEdit_fct_comp_1">
+      <widget class="QRadioButton" name="Femmes">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="text">
-        <string>Saisissez une catégorie :</string>
+        <string>Femmes</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit_fct_comp_1"/>
+      <widget class="QRadioButton" name="Hommes">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="text">
+        <string>Hommes</string>
+       </property>
+      </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="valider_fct_comp_1">
+      <widget class="QRadioButton" name="Mixtes">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="text">
-        <string>Valider</string>
+        <string>Mixtes</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="labelAFaire_fct_comp_1">
+   <item row="0" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="labelEdit_fct_comp_1">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Choisissez une catégorie :</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="6" column="0">
+    <widget class="QLabel" name="label_fct_comp_1">
      <property name="text">
-      <string>Travail à réaliser : améliorer l'interface afin de proposer une liste des catégories possibles (issues de la base de données).</string>
+      <string/>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="3" column="0">
     <widget class="QTableWidget" name="table_fct_comp_1">
      <attribute name="horizontalHeaderMinimumSectionSize">
       <number>50</number>
@@ -96,10 +140,10 @@
      </column>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_fct_comp_1">
+   <item row="2" column="0">
+    <widget class="QLabel" name="affichage_taille">
      <property name="text">
-      <string/>
+      <string>Aucune ligne affichée</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -111,23 +155,58 @@
  <resources/>
  <connections>
   <connection>
-   <sender>valider_fct_comp_1</sender>
-   <signal>clicked()</signal>
+   <sender>Femmes</sender>
+   <signal>toggled(bool)</signal>
    <receiver>fct_comp_1</receiver>
    <slot>refreshResult()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>364</x>
-     <y>52</y>
+     <x>67</x>
+     <y>38</y>
     </hint>
     <hint type="destinationlabel">
-     <x>444</x>
-     <y>81</y>
+     <x>77</x>
+     <y>24</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>Hommes</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>fct_comp_1</receiver>
+   <slot>refreshResult()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>304</x>
+     <y>37</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>305</x>
+     <y>28</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>Mixtes</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>fct_comp_1</receiver>
+   <slot>refreshResult()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>560</x>
+     <y>38</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>567</x>
+     <y>29</y>
     </hint>
    </hints>
   </connection>
  </connections>
  <slots>
   <slot>refreshResult()</slot>
+  <slot>chargerFeminin()</slot>
+  <slot>chargerMasculin()</slot>
+  <slot>chargerMixte()</slot>
  </slots>
 </ui>
