--- a/gui/v1_tablesData.ui
+++ b/gui/v1_tablesData.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>968</width>
+    <width>964</width>
     <height>600</height>
    </rect>
   </property>
@@ -29,7 +29,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="tabEpreuves">
       <attribute name="title">
@@ -71,14 +71,14 @@
          <attribute name="horizontalHeaderCascadingSectionResizes">
           <bool>true</bool>
          </attribute>
+         <attribute name="horizontalHeaderMinimumSectionSize">
+          <number>50</number>
+         </attribute>
          <attribute name="horizontalHeaderDefaultSectionSize">
           <number>110</number>
          </attribute>
          <attribute name="horizontalHeaderHighlightSections">
           <bool>true</bool>
-         </attribute>
-         <attribute name="horizontalHeaderMinimumSectionSize">
-          <number>50</number>
          </attribute>
          <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
           <bool>true</bool>
@@ -185,11 +185,11 @@
       <layout class="QVBoxLayout" name="verticalLayout_7">
        <item>
         <widget class="QTableWidget" name="tableSportifs">
-         <attribute name="horizontalHeaderDefaultSectionSize">
-          <number>110</number>
-         </attribute>
          <attribute name="horizontalHeaderMinimumSectionSize">
           <number>50</number>
+         </attribute>
+         <attribute name="horizontalHeaderDefaultSectionSize">
+          <number>110</number>
          </attribute>
          <attribute name="horizontalHeaderStretchLastSection">
           <bool>true</bool>
@@ -282,6 +282,168 @@
         </widget>
        </item>
       </layout>
+     </widget>
+     <widget class="QWidget" name="tabInscriptions">
+      <attribute name="title">
+       <string>LesInscriptions</string>
+      </attribute>
+      <widget class="QLabel" name="label_inscriptions">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>491</y>
+         <width>921</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QTableWidget" name="tableInscriptions">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>921</width>
+         <height>471</height>
+        </rect>
+       </property>
+       <column>
+        <property name="text">
+         <string>numIn</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>numEp</string>
+        </property>
+       </column>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="tabResultats">
+      <attribute name="title">
+       <string>LesResultats</string>
+      </attribute>
+      <widget class="QTableWidget" name="tableResultats">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>921</width>
+         <height>471</height>
+        </rect>
+       </property>
+       <column>
+        <property name="text">
+         <string>numEp</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>gold</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>silver</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>bronze</string>
+        </property>
+       </column>
+      </widget>
+      <widget class="QLabel" name="label_resultats">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>490</y>
+         <width>921</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="tabAges">
+      <attribute name="title">
+       <string>LesAgesSportifs</string>
+      </attribute>
+      <widget class="QLabel" name="label_ages">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>490</y>
+         <width>921</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QTableWidget" name="tableAges">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>921</width>
+         <height>471</height>
+        </rect>
+       </property>
+       <column>
+        <property name="text">
+         <string>age</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>numSp</string>
+        </property>
+       </column>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="tabEquipiers">
+      <attribute name="title">
+       <string>nbEquipiers</string>
+      </attribute>
+      <widget class="QTableWidget" name="tableNbEquipiers">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>921</width>
+         <height>471</height>
+        </rect>
+       </property>
+       <column>
+        <property name="text">
+         <string>nbEquipiers</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>numEq</string>
+        </property>
+       </column>
+      </widget>
+      <widget class="QLabel" name="label_nb_equipiers">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>490</y>
+         <width>921</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </widget>
     </widget>
    </item>
