--- a/gui/fct_comp_1.ui
+++ b/gui/fct_comp_1.ui
@@ -143,7 +143,7 @@
    <item row="2" column="0">
     <widget class="QLabel" name="affichage_taille">
      <property name="text">
-      <string>Aucune ligne affichée</string>
+      <string/>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
