--- a/gui/fct_partie3_1.ui
+++ b/gui/fct_partie3_1.ui
@@ -61,7 +61,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="Valider_sportif_2">
+  <widget class="QPushButton" name="Valider_ajouter">
    <property name="geometry">
     <rect>
      <x>640</x>
@@ -77,7 +77,7 @@
     <string>Ajouter</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="input_numIn">
    <property name="geometry">
     <rect>
      <x>500</x>
@@ -87,7 +87,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="input_numEp">
    <property name="geometry">
     <rect>
      <x>500</x>
@@ -263,7 +263,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="Valider_sportif_3">
+  <widget class="QPushButton" name="Valider_supprimer">
    <property name="geometry">
     <rect>
      <x>550</x>
@@ -280,6 +280,89 @@
    </property>
    <property name="text">
     <string>Supprimer</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>410</y>
+     <width>251</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Modifier une inscription</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>470</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>numIn</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>510</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>numEp</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="modif_numIn">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>470</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="modif_numEp">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>510</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Valider_modifier">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>490</y>
+     <width>91</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::DefaultContextMenu</enum>
+   </property>
+   <property name="text">
+    <string>Modifier</string>
    </property>
   </widget>
  </widget>
@@ -301,10 +384,60 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>Valider_ajouter</sender>
+   <signal>clicked()</signal>
+   <receiver>fct_partie3_1</receiver>
+   <slot>ajouterInscription()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>707</x>
+     <y>88</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>740</x>
+     <y>92</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>Valider_supprimer</sender>
+   <signal>clicked()</signal>
+   <receiver>fct_partie3_1</receiver>
+   <slot>supprimerInscription()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>603</x>
+     <y>352</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>651</x>
+     <y>352</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>Valider_modifier</sender>
+   <signal>clicked()</signal>
+   <receiver>fct_partie3_1</receiver>
+   <slot>modifierInscription()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>709</x>
+     <y>498</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>745</x>
+     <y>503</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>refreshResult()</slot>
-  <slot>fct_ajouter_inscription()</slot>
   <slot>afficherInscription()</slot>
+  <slot>modifierInscription()</slot>
+  <slot>ajouterInscription()</slot>
+  <slot>supprimerInscription()</slot>
  </slots>
 </ui>
