--- a/gui/fct_partie3_1.ui
+++ b/gui/fct_partie3_1.ui
@@ -65,7 +65,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>80</y>
+     <y>90</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -91,7 +91,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>100</y>
+     <y>110</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -127,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>100</y>
+     <y>110</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -254,7 +254,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>380</y>
+     <y>400</y>
      <width>511</width>
      <height>20</height>
     </rect>
@@ -286,7 +286,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>410</y>
+     <y>420</y>
      <width>251</width>
      <height>31</height>
     </rect>
@@ -304,7 +304,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>470</y>
+     <y>510</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -317,7 +317,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>510</y>
+     <y>550</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -330,7 +330,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>470</y>
+     <y>500</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -340,7 +340,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>510</y>
+     <y>550</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -350,7 +350,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>490</y>
+     <y>520</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -363,6 +363,19 @@
    </property>
    <property name="text">
     <string>Modifier</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_erreur_modif">
+   <property name="geometry">
+    <rect>
+     <x>390</x>
+     <y>453</y>
+     <width>421</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
