--- a/gui/fct_partie3_1.ui
+++ b/gui/fct_partie3_1.ui
@@ -13,25 +13,6 @@
   <property name="windowTitle">
    <string>Nom, prénom, pays, catégorie des sportifs d'une équipe</string>
   </property>
-  <widget class="QLabel" name="label_partie3_1">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>703</y>
-     <width>16</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>16777215</width>
-     <height>20</height>
-    </size>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
@@ -65,7 +46,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>90</y>
+     <y>120</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -81,7 +62,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>70</y>
+     <y>90</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -91,7 +72,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>110</y>
+     <y>150</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -113,8 +94,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>70</y>
+     <x>440</x>
+     <y>90</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -126,8 +107,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>110</y>
+     <x>440</x>
+     <y>150</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -140,7 +121,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>150</y>
+     <y>200</y>
      <width>511</width>
      <height>20</height>
     </rect>
@@ -171,7 +152,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>180</y>
+     <y>220</y>
      <width>251</width>
      <height>31</height>
     </rect>
@@ -188,8 +169,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>236</y>
+     <x>370</x>
+     <y>300</y>
      <width>141</width>
      <height>20</height>
     </rect>
@@ -201,8 +182,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>270</y>
+     <x>460</x>
+     <y>330</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -214,8 +195,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>300</y>
+     <x>460</x>
+     <y>370</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -228,7 +209,7 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>300</y>
+     <y>330</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -241,9 +222,9 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>270</y>
-     <width>47</width>
-     <height>13</height>
+     <y>370</y>
+     <width>71</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
@@ -254,7 +235,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>400</y>
+     <y>440</y>
      <width>511</width>
      <height>20</height>
     </rect>
@@ -267,7 +248,7 @@
    <property name="geometry">
     <rect>
      <x>550</x>
-     <y>340</y>
+     <y>400</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -286,7 +267,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>420</y>
+     <y>450</y>
      <width>251</width>
      <height>31</height>
     </rect>
@@ -303,8 +284,8 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>510</y>
+     <x>440</x>
+     <y>530</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -316,8 +297,8 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>550</y>
+     <x>440</x>
+     <y>590</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -330,7 +311,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>500</y>
+     <y>530</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -340,7 +321,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>550</y>
+     <y>590</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -350,7 +331,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>520</y>
+     <y>560</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -368,9 +349,35 @@
   <widget class="QLabel" name="label_erreur_modif">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>453</y>
-     <width>421</width>
+     <x>370</x>
+     <y>490</y>
+     <width>471</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_erreur_supprimer">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>260</y>
+     <width>461</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_erreur_ajouter">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>40</y>
+     <width>481</width>
      <height>20</height>
     </rect>
    </property>
