--- a/gui/mainWindow.ui
+++ b/gui/mainWindow.ui
@@ -1229,6 +1229,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton_3_2</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>open_fct_partie3_2()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>407</x>
+     <y>783</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>452</x>
+     <y>784</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>createDBV0()</slot>
@@ -1247,5 +1263,6 @@
   <slot>open_fct_partie2_2()</slot>
   <slot>open_fct_partie2_1()</slot>
   <slot>open_fct_partie3_1()</slot>
+  <slot>open_fct_partie3_2()</slot>
  </slots>
 </ui>
