--- a/gui/fct_partie2_2.ui
+++ b/gui/fct_partie2_2.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Nom, prénom, pays, catégorie des sportifs de l'équipe 1</string>
+   <string>Classement des pays selon leur nombre de médailles</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
